[package]
name = "frosty-taipei"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# FROST cryptography
schnorr_fun = { path = "../secp256kfun/schnorr_fun", features = ["serde", "bincode"] }
secp256kfun = { path = "../secp256kfun/secp256kfun", features = ["serde", "bincode"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Random
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
