[package]
name = "yushan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
console_error_panic_hook = "0.1"
base64 = "0.22"
# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# FROST cryptography
schnorr_fun = { version = "0.12.0", features = ["serde", "bincode"] }
secp256kfun = { version = "0.12.0", features = ["serde", "bincode"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Random
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
